Extracted metrics for MD from Census ACS

--- a/Build_economy_2016-2021.ipynb
+++ b/Build_economy_2016-2021.ipynb
@@ -1093,8 +1093,8 @@
     }
    ],
    "source": [
-    "income_df = income_df.drop(['Location'], axis=1)\n",
-    "income_df"
+    "#income_df = income_df.drop(['Location'], axis=1)\n",
+    "#income_df"
    ]
   },
   {
