Extracted unemployment rate from ACS and saved to nb

--- a/Build_economy2016.ipynb
+++ b/Build_economy2016.ipynb
@@ -691,12 +691,88 @@
   {
    "cell_type": "code",
    "execution_count": 18,
+   "id": "90f98963",
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/html": [
+       "<div>\n",
+       "<style scoped>\n",
+       "    .dataframe tbody tr th:only-of-type {\n",
+       "        vertical-align: middle;\n",
+       "    }\n",
+       "\n",
+       "    .dataframe tbody tr th {\n",
+       "        vertical-align: top;\n",
+       "    }\n",
+       "\n",
+       "    .dataframe thead th {\n",
+       "        text-align: right;\n",
+       "    }\n",
+       "</style>\n",
+       "<table border=\"1\" class=\"dataframe\">\n",
+       "  <thead>\n",
+       "    <tr style=\"text-align: right;\">\n",
+       "      <th></th>\n",
+       "      <th>Year</th>\n",
+       "      <th>Total households</th>\n",
+       "      <th>Population</th>\n",
+       "      <th>Median household income</th>\n",
+       "      <th>Pop. white</th>\n",
+       "      <th>Pop. Black</th>\n",
+       "      <th>Median HH income White Alone Householder</th>\n",
+       "      <th>Median HH income Black or African American Alone Householder</th>\n",
+       "      <th>Location</th>\n",
+       "    </tr>\n",
+       "  </thead>\n",
+       "  <tbody>\n",
+       "    <tr>\n",
+       "      <th>0</th>\n",
+       "      <td>2016</td>\n",
+       "      <td>240761</td>\n",
+       "      <td>614664</td>\n",
+       "      <td>47350</td>\n",
+       "      <td>189260</td>\n",
+       "      <td>384465</td>\n",
+       "      <td>72002</td>\n",
+       "      <td>37225</td>\n",
+       "      <td>Baltimore</td>\n",
+       "    </tr>\n",
+       "  </tbody>\n",
+       "</table>\n",
+       "</div>"
+      ],
+      "text/plain": [
+       "    Year  Total households  Population  Median household income  Pop. white  \\\n",
+       "0   2016            240761      614664                    47350      189260   \n",
+       "\n",
+       "   Pop. Black  Median HH income White Alone Householder  \\\n",
+       "0      384465                                     72002   \n",
+       "\n",
+       "   Median HH income Black or African American Alone Householder   Location  \n",
+       "0                                                         37225  Baltimore  "
+      ]
+     },
+     "execution_count": 18,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "income_2016[[\"Location\", \"Year\"]] = income_2016.Year.str.split(\",\", expand=True)\n",
+    "income_2016"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 20,
    "id": "baa33982",
    "metadata": {},
    "outputs": [],
    "source": [
     "# Export file as a CSV, without the Pandas index, but with the header\n",
-    "income_2016.to_csv(\"MD_income_2016.csv\", index = False, header=True)"
+    "income_2016.to_csv(\"balt_income_2016.csv\", index = False, header=True)"
    ]
   },
   {
