--- a/Build_economy2016_MD.ipynb
+++ b/Build_economy2016_MD.ipynb
@@ -429,7 +429,7 @@
        "  </thead>\n",
        "  <tbody>\n",
        "    <tr>\n",
-       "      <th>Baltimore, 2016</th>\n",
+       "      <th>Maryland, 2016</th>\n",
        "      <td>240761</td>\n",
        "      <td>614664</td>\n",
        "      <td>47350</td>\n",
@@ -443,17 +443,17 @@
        "</div>"
       ],
       "text/plain": [
-       "                 Total households  Population  Median household income  \\\n",
-       "Baltimore, 2016            240761      614664                    47350   \n",
+       "                Total households  Population  Median household income  \\\n",
+       "Maryland, 2016            240761      614664                    47350   \n",
        "\n",
-       "                 Pop. white  Pop. Black  \\\n",
-       "Baltimore, 2016      189260      384465   \n",
+       "                Pop. white  Pop. Black  \\\n",
+       "Maryland, 2016      189260      384465   \n",
        "\n",
-       "                 Median HH income White Alone Householder  \\\n",
-       "Baltimore, 2016                                     72002   \n",
+       "                Median HH income White Alone Householder  \\\n",
+       "Maryland, 2016                                     72002   \n",
        "\n",
-       "                 Median HH income Black or African American Alone Householder  \n",
-       "Baltimore, 2016                                                         37225  "
+       "                Median HH income Black or African American Alone Householder  \n",
+       "Maryland, 2016                                                         37225  "
       ]
      },
      "execution_count": 14,
@@ -462,7 +462,7 @@
     }
    ],
    "source": [
-    "census.index = ['Baltimore, 2016']\n",
+    "census.index = ['Maryland, 2016']\n",
     "census"
    ]
   },
@@ -506,7 +506,7 @@
        "  <tbody>\n",
        "    <tr>\n",
        "      <th>0</th>\n",
-       "      <td>Baltimore, 2016</td>\n",
+       "      <td>Maryland, 2016</td>\n",
        "      <td>240761</td>\n",
        "      <td>614664</td>\n",
        "      <td>47350</td>\n",
@@ -520,8 +520,8 @@
        "</div>"
       ],
       "text/plain": [
-       "             index  Total households  Population  Median household income  \\\n",
-       "0  Baltimore, 2016            240761      614664                    47350   \n",
+       "            index  Total households  Population  Median household income  \\\n",
+       "0  Maryland, 2016            240761      614664                    47350   \n",
        "\n",
        "   Pop. white  Pop. Black  Median HH income White Alone Householder  \\\n",
        "0      189260      384465                                     72002   \n",
@@ -580,7 +580,7 @@
        "  <tbody>\n",
        "    <tr>\n",
        "      <th>0</th>\n",
-       "      <td>Baltimore, 2016</td>\n",
+       "      <td>Maryland, 2016</td>\n",
        "      <td>240761</td>\n",
        "      <td>614664</td>\n",
        "      <td>47350</td>\n",
@@ -594,8 +594,8 @@
        "</div>"
       ],
       "text/plain": [
-       "              Year  Total households  Population  Median household income  \\\n",
-       "0  Baltimore, 2016            240761      614664                    47350   \n",
+       "             Year  Total households  Population  Median household income  \\\n",
+       "0  Maryland, 2016            240761      614664                    47350   \n",
        "\n",
        "   Pop. white  Pop. Black  Median HH income White Alone Householder  \\\n",
        "0      189260      384465                                     72002   \n",
@@ -654,7 +654,7 @@
        "  <tbody>\n",
        "    <tr>\n",
        "      <th>0</th>\n",
-       "      <td>Baltimore, 2016</td>\n",
+       "      <td>Maryland, 2016</td>\n",
        "      <td>240761</td>\n",
        "      <td>614664</td>\n",
        "      <td>47350</td>\n",
@@ -668,8 +668,8 @@
        "</div>"
       ],
       "text/plain": [
-       "              Year  Total households  Population  Median household income  \\\n",
-       "0  Baltimore, 2016            240761      614664                    47350   \n",
+       "             Year  Total households  Population  Median household income  \\\n",
+       "0  Maryland, 2016            240761      614664                    47350   \n",
        "\n",
        "   Pop. white  Pop. Black  Median HH income White Alone Householder  \\\n",
        "0      189260      384465                                     72002   \n",
@@ -737,7 +737,7 @@
        "      <td>384465</td>\n",
        "      <td>72002</td>\n",
        "      <td>37225</td>\n",
-       "      <td>Baltimore</td>\n",
+       "      <td>Maryland</td>\n",
        "    </tr>\n",
        "  </tbody>\n",
        "</table>\n",
@@ -750,8 +750,8 @@
        "   Pop. Black  Median HH income White Alone Householder  \\\n",
        "0      384465                                     72002   \n",
        "\n",
-       "   Median HH income Black or African American Alone Householder   Location  \n",
-       "0                                                         37225  Baltimore  "
+       "   Median HH income Black or African American Alone Householder  Location  \n",
+       "0                                                         37225  Maryland  "
       ]
      },
      "execution_count": 18,
@@ -772,7 +772,7 @@
    "outputs": [],
    "source": [
     "# Export file as a CSV, without the Pandas index, but with the header\n",
-    "#income_2016.to_csv(\"ACS_income_2016.csv\", index = False, header=True)"
+    "income_2016.to_csv(\"MD_income_2016.csv\", index = False, header=True)"
    ]
   },
   {
