--- a/Build_economy2017.ipynb
+++ b/Build_economy2017.ipynb
@@ -690,13 +690,89 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 19,
+   "execution_count": 18,
+   "id": "49d07f3d",
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/html": [
+       "<div>\n",
+       "<style scoped>\n",
+       "    .dataframe tbody tr th:only-of-type {\n",
+       "        vertical-align: middle;\n",
+       "    }\n",
+       "\n",
+       "    .dataframe tbody tr th {\n",
+       "        vertical-align: top;\n",
+       "    }\n",
+       "\n",
+       "    .dataframe thead th {\n",
+       "        text-align: right;\n",
+       "    }\n",
+       "</style>\n",
+       "<table border=\"1\" class=\"dataframe\">\n",
+       "  <thead>\n",
+       "    <tr style=\"text-align: right;\">\n",
+       "      <th></th>\n",
+       "      <th>Year</th>\n",
+       "      <th>Total households</th>\n",
+       "      <th>Population</th>\n",
+       "      <th>Median household income</th>\n",
+       "      <th>Pop. white</th>\n",
+       "      <th>Pop. Black</th>\n",
+       "      <th>Median HH income White Alone Householder</th>\n",
+       "      <th>Median HH income Black or African American Alone Householder</th>\n",
+       "      <th>Location</th>\n",
+       "    </tr>\n",
+       "  </thead>\n",
+       "  <tbody>\n",
+       "    <tr>\n",
+       "      <th>0</th>\n",
+       "      <td>2017</td>\n",
+       "      <td>240280</td>\n",
+       "      <td>611648</td>\n",
+       "      <td>47131</td>\n",
+       "      <td>183988</td>\n",
+       "      <td>383508</td>\n",
+       "      <td>75009</td>\n",
+       "      <td>36648</td>\n",
+       "      <td>Baltimore</td>\n",
+       "    </tr>\n",
+       "  </tbody>\n",
+       "</table>\n",
+       "</div>"
+      ],
+      "text/plain": [
+       "    Year  Total households  Population  Median household income  Pop. white  \\\n",
+       "0   2017            240280      611648                    47131      183988   \n",
+       "\n",
+       "   Pop. Black  Median HH income White Alone Householder  \\\n",
+       "0      383508                                     75009   \n",
+       "\n",
+       "   Median HH income Black or African American Alone Householder   Location  \n",
+       "0                                                         36648  Baltimore  "
+      ]
+     },
+     "execution_count": 18,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "income_2017[[\"Location\", \"Year\"]] = income_2017.Year.str.split(\",\", expand=True)\n",
+    "income_2017"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 20,
    "id": "baa33982",
    "metadata": {},
    "outputs": [],
    "source": [
     "# Export file as a CSV, without the Pandas index, but with the header\n",
-    "#income_2017.to_csv(\"ACS_income_2017.csv\", index = False, header=True)"
+    "income_2017.to_csv(\"balt_income_2017.csv\", index = False, header=True)"
    ]
   },
   {
