--- a/Build_economy2017_MD.ipynb
+++ b/Build_economy2017_MD.ipynb
@@ -666,7 +666,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 19,
+   "execution_count": 18,
    "id": "fd668289",
    "metadata": {},
    "outputs": [
@@ -730,7 +730,7 @@
        "0                                                         64120  Maryland  "
       ]
      },
-     "execution_count": 19,
+     "execution_count": 18,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -742,13 +742,13 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 18,
+   "execution_count": 19,
    "id": "baa33982",
    "metadata": {},
    "outputs": [],
    "source": [
     "# Export file as a CSV, without the Pandas index, but with the header\n",
-    "#income_2017.to_csv(\"MD_income_2017.csv\", index = False, header=True)"
+    "income_2017.to_csv(\"MD_income_2017.csv\", index = False, header=True)"
    ]
   },
   {
