--- a/Build_economy2021_MD.ipynb
+++ b/Build_economy2021_MD.ipynb
@@ -160,13 +160,13 @@
        "  <tbody>\n",
        "    <tr>\n",
        "      <th>Maryland: Summary level: 040, state:24</th>\n",
-       "      <td>2226767</td>\n",
-       "      <td>6045680</td>\n",
-       "      <td>86738</td>\n",
-       "      <td>3296909</td>\n",
-       "      <td>1830059</td>\n",
-       "      <td>96724</td>\n",
-       "      <td>68377</td>\n",
+       "      <td>2355652</td>\n",
+       "      <td>6165129</td>\n",
+       "      <td>90203</td>\n",
+       "      <td>3018844</td>\n",
+       "      <td>1810345</td>\n",
+       "      <td>100980</td>\n",
+       "      <td>71790</td>\n",
        "    </tr>\n",
        "  </tbody>\n",
        "</table>\n",
@@ -174,13 +174,13 @@
       ],
       "text/plain": [
        "                                        B19001_001E  B01003_001E  B19013_001E  \\\n",
-       "Maryland: Summary level: 040, state:24      2226767      6045680        86738   \n",
+       "Maryland: Summary level: 040, state:24      2355652      6165129        90203   \n",
        "\n",
        "                                        B02001_002E  B02001_003E  \\\n",
-       "Maryland: Summary level: 040, state:24      3296909      1830059   \n",
+       "Maryland: Summary level: 040, state:24      3018844      1810345   \n",
        "\n",
        "                                        B19013A_001E  B19013B_001E  \n",
-       "Maryland: Summary level: 040, state:24         96724         68377  "
+       "Maryland: Summary level: 040, state:24        100980         71790  "
       ]
      },
      "execution_count": 11,
@@ -242,13 +242,13 @@
        "  <tbody>\n",
        "    <tr>\n",
        "      <th>Maryland: Summary level: 040, state:24</th>\n",
-       "      <td>2226767</td>\n",
-       "      <td>6045680</td>\n",
-       "      <td>86738</td>\n",
-       "      <td>3296909</td>\n",
-       "      <td>1830059</td>\n",
-       "      <td>96724</td>\n",
-       "      <td>68377</td>\n",
+       "      <td>2355652</td>\n",
+       "      <td>6165129</td>\n",
+       "      <td>90203</td>\n",
+       "      <td>3018844</td>\n",
+       "      <td>1810345</td>\n",
+       "      <td>100980</td>\n",
+       "      <td>71790</td>\n",
        "    </tr>\n",
        "  </tbody>\n",
        "</table>\n",
@@ -256,19 +256,19 @@
       ],
       "text/plain": [
        "                                        Total households  Population  \\\n",
-       "Maryland: Summary level: 040, state:24           2226767     6045680   \n",
+       "Maryland: Summary level: 040, state:24           2355652     6165129   \n",
        "\n",
        "                                        Median household income  Pop. white  \\\n",
-       "Maryland: Summary level: 040, state:24                    86738     3296909   \n",
+       "Maryland: Summary level: 040, state:24                    90203     3018844   \n",
        "\n",
        "                                        Pop. Black  \\\n",
-       "Maryland: Summary level: 040, state:24     1830059   \n",
+       "Maryland: Summary level: 040, state:24     1810345   \n",
        "\n",
        "                                        Median HH income White Alone Householder  \\\n",
-       "Maryland: Summary level: 040, state:24                                     96724   \n",
+       "Maryland: Summary level: 040, state:24                                    100980   \n",
        "\n",
        "                                        Median HH income Black or African American Alone Householder  \n",
-       "Maryland: Summary level: 040, state:24                                                         68377  "
+       "Maryland: Summary level: 040, state:24                                                         71790  "
       ]
      },
      "execution_count": 12,
@@ -328,13 +328,13 @@
        "  <tbody>\n",
        "    <tr>\n",
        "      <th>Maryland: Summary level: 040, state:24</th>\n",
-       "      <td>2226767</td>\n",
-       "      <td>6045680</td>\n",
-       "      <td>86738</td>\n",
-       "      <td>3296909</td>\n",
-       "      <td>1830059</td>\n",
-       "      <td>96724</td>\n",
-       "      <td>68377</td>\n",
+       "      <td>2355652</td>\n",
+       "      <td>6165129</td>\n",
+       "      <td>90203</td>\n",
+       "      <td>3018844</td>\n",
+       "      <td>1810345</td>\n",
+       "      <td>100980</td>\n",
+       "      <td>71790</td>\n",
        "    </tr>\n",
        "  </tbody>\n",
        "</table>\n",
@@ -342,19 +342,19 @@
       ],
       "text/plain": [
        "                                        Total households  Population  \\\n",
-       "Maryland: Summary level: 040, state:24           2226767     6045680   \n",
+       "Maryland: Summary level: 040, state:24           2355652     6165129   \n",
        "\n",
        "                                        Median household income  Pop. white  \\\n",
-       "Maryland: Summary level: 040, state:24                    86738     3296909   \n",
+       "Maryland: Summary level: 040, state:24                    90203     3018844   \n",
        "\n",
        "                                        Pop. Black  \\\n",
-       "Maryland: Summary level: 040, state:24     1830059   \n",
+       "Maryland: Summary level: 040, state:24     1810345   \n",
        "\n",
        "                                        Median HH income White Alone Householder  \\\n",
-       "Maryland: Summary level: 040, state:24                                     96724   \n",
+       "Maryland: Summary level: 040, state:24                                    100980   \n",
        "\n",
        "                                        Median HH income Black or African American Alone Householder  \n",
-       "Maryland: Summary level: 040, state:24                                                         68377  "
+       "Maryland: Summary level: 040, state:24                                                         71790  "
       ]
      },
      "execution_count": 13,
@@ -405,14 +405,14 @@
        "  </thead>\n",
        "  <tbody>\n",
        "    <tr>\n",
-       "      <th>Maryland, 2019</th>\n",
-       "      <td>2226767</td>\n",
-       "      <td>6045680</td>\n",
-       "      <td>86738</td>\n",
-       "      <td>3296909</td>\n",
-       "      <td>1830059</td>\n",
-       "      <td>96724</td>\n",
-       "      <td>68377</td>\n",
+       "      <th>Maryland, 2021</th>\n",
+       "      <td>2355652</td>\n",
+       "      <td>6165129</td>\n",
+       "      <td>90203</td>\n",
+       "      <td>3018844</td>\n",
+       "      <td>1810345</td>\n",
+       "      <td>100980</td>\n",
+       "      <td>71790</td>\n",
        "    </tr>\n",
        "  </tbody>\n",
        "</table>\n",
@@ -420,16 +420,16 @@
       ],
       "text/plain": [
        "                Total households  Population  Median household income  \\\n",
-       "Maryland, 2019           2226767     6045680                    86738   \n",
+       "Maryland, 2021           2355652     6165129                    90203   \n",
        "\n",
        "                Pop. white  Pop. Black  \\\n",
-       "Maryland, 2019     3296909     1830059   \n",
+       "Maryland, 2021     3018844     1810345   \n",
        "\n",
        "                Median HH income White Alone Householder  \\\n",
-       "Maryland, 2019                                     96724   \n",
+       "Maryland, 2021                                    100980   \n",
        "\n",
        "                Median HH income Black or African American Alone Householder  \n",
-       "Maryland, 2019                                                         68377  "
+       "Maryland, 2021                                                         71790  "
       ]
      },
      "execution_count": 14,
@@ -482,14 +482,14 @@
        "  <tbody>\n",
        "    <tr>\n",
        "      <th>0</th>\n",
-       "      <td>Maryland, 2019</td>\n",
-       "      <td>2226767</td>\n",
-       "      <td>6045680</td>\n",
-       "      <td>86738</td>\n",
-       "      <td>3296909</td>\n",
-       "      <td>1830059</td>\n",
-       "      <td>96724</td>\n",
-       "      <td>68377</td>\n",
+       "      <td>Maryland, 2021</td>\n",
+       "      <td>2355652</td>\n",
+       "      <td>6165129</td>\n",
+       "      <td>90203</td>\n",
+       "      <td>3018844</td>\n",
+       "      <td>1810345</td>\n",
+       "      <td>100980</td>\n",
+       "      <td>71790</td>\n",
        "    </tr>\n",
        "  </tbody>\n",
        "</table>\n",
@@ -497,13 +497,13 @@
       ],
       "text/plain": [
        "            index  Total households  Population  Median household income  \\\n",
-       "0  Maryland, 2019           2226767     6045680                    86738   \n",
+       "0  Maryland, 2021           2355652     6165129                    90203   \n",
        "\n",
        "   Pop. white  Pop. Black  Median HH income White Alone Householder  \\\n",
-       "0     3296909     1830059                                     96724   \n",
+       "0     3018844     1810345                                    100980   \n",
        "\n",
        "   Median HH income Black or African American Alone Householder  \n",
-       "0                                                         68377  "
+       "0                                                         71790  "
       ]
      },
      "execution_count": 15,
@@ -556,14 +556,14 @@
        "  <tbody>\n",
        "    <tr>\n",
        "      <th>0</th>\n",
-       "      <td>Maryland, 2019</td>\n",
-       "      <td>2226767</td>\n",
-       "      <td>6045680</td>\n",
-       "      <td>86738</td>\n",
-       "      <td>3296909</td>\n",
-       "      <td>1830059</td>\n",
-       "      <td>96724</td>\n",
-       "      <td>68377</td>\n",
+       "      <td>Maryland, 2021</td>\n",
+       "      <td>2355652</td>\n",
+       "      <td>6165129</td>\n",
+       "      <td>90203</td>\n",
+       "      <td>3018844</td>\n",
+       "      <td>1810345</td>\n",
+       "      <td>100980</td>\n",
+       "      <td>71790</td>\n",
        "    </tr>\n",
        "  </tbody>\n",
        "</table>\n",
@@ -571,13 +571,13 @@
       ],
       "text/plain": [
        "             Year  Total households  Population  Median household income  \\\n",
-       "0  Maryland, 2019           2226767     6045680                    86738   \n",
+       "0  Maryland, 2021           2355652     6165129                    90203   \n",
        "\n",
        "   Pop. white  Pop. Black  Median HH income White Alone Householder  \\\n",
-       "0     3296909     1830059                                     96724   \n",
+       "0     3018844     1810345                                    100980   \n",
        "\n",
        "   Median HH income Black or African American Alone Householder  \n",
-       "0                                                         68377  "
+       "0                                                         71790  "
       ]
      },
      "execution_count": 16,
@@ -630,14 +630,14 @@
        "  <tbody>\n",
        "    <tr>\n",
        "      <th>0</th>\n",
-       "      <td>Maryland, 2019</td>\n",
-       "      <td>2226767</td>\n",
-       "      <td>6045680</td>\n",
-       "      <td>86738</td>\n",
-       "      <td>3296909</td>\n",
-       "      <td>1830059</td>\n",
-       "      <td>96724</td>\n",
-       "      <td>68377</td>\n",
+       "      <td>Maryland, 2021</td>\n",
+       "      <td>2355652</td>\n",
+       "      <td>6165129</td>\n",
+       "      <td>90203</td>\n",
+       "      <td>3018844</td>\n",
+       "      <td>1810345</td>\n",
+       "      <td>100980</td>\n",
+       "      <td>71790</td>\n",
        "    </tr>\n",
        "  </tbody>\n",
        "</table>\n",
@@ -645,13 +645,13 @@
       ],
       "text/plain": [
        "             Year  Total households  Population  Median household income  \\\n",
-       "0  Maryland, 2019           2226767     6045680                    86738   \n",
+       "0  Maryland, 2021           2355652     6165129                    90203   \n",
        "\n",
        "   Pop. white  Pop. Black  Median HH income White Alone Householder  \\\n",
-       "0     3296909     1830059                                     96724   \n",
+       "0     3018844     1810345                                    100980   \n",
        "\n",
        "   Median HH income Black or African American Alone Householder  \n",
-       "0                                                         68377  "
+       "0                                                         71790  "
       ]
      },
      "execution_count": 17,
@@ -705,14 +705,14 @@
        "  <tbody>\n",
        "    <tr>\n",
        "      <th>0</th>\n",
-       "      <td>2019</td>\n",
-       "      <td>2226767</td>\n",
-       "      <td>6045680</td>\n",
-       "      <td>86738</td>\n",
-       "      <td>3296909</td>\n",
-       "      <td>1830059</td>\n",
-       "      <td>96724</td>\n",
-       "      <td>68377</td>\n",
+       "      <td>2021</td>\n",
+       "      <td>2355652</td>\n",
+       "      <td>6165129</td>\n",
+       "      <td>90203</td>\n",
+       "      <td>3018844</td>\n",
+       "      <td>1810345</td>\n",
+       "      <td>100980</td>\n",
+       "      <td>71790</td>\n",
        "      <td>Maryland</td>\n",
        "    </tr>\n",
        "  </tbody>\n",
@@ -721,13 +721,13 @@
       ],
       "text/plain": [
        "    Year  Total households  Population  Median household income  Pop. white  \\\n",
-       "0   2019           2226767     6045680                    86738     3296909   \n",
+       "0   2021           2355652     6165129                    90203     3018844   \n",
        "\n",
        "   Pop. Black  Median HH income White Alone Householder  \\\n",
-       "0     1830059                                     96724   \n",
+       "0     1810345                                    100980   \n",
        "\n",
        "   Median HH income Black or African American Alone Householder  Location  \n",
-       "0                                                         68377  Maryland  "
+       "0                                                         71790  Maryland  "
       ]
      },
      "execution_count": 18,
@@ -748,7 +748,7 @@
    "outputs": [],
    "source": [
     "# Export file as a CSV, without the Pandas index, but with the header\n",
-    "#income_2021.to_csv(\"MD_income_2021.csv\", index = False, header=True)"
+    "income_2021.to_csv(\"MD_income_2021.csv\", index = False, header=True)"
    ]
   },
   {
