--- a/Grow_Population_2016-2021.ipynb
+++ b/Grow_Population_2016-2021.ipynb
@@ -1414,7 +1414,7 @@
     }
    ],
    "source": [
-    "# Create dataframes by reading the variable data from the code block above\n",
+    "# Create dataframe by reading the variable data from the code block above\n",
     "MD_df = pd.read_csv(MD_2021)\n",
     "MD_df"
    ]
