--- a/Build_economy2018.ipynb
+++ b/Build_economy2018.ipynb
@@ -691,12 +691,88 @@
   {
    "cell_type": "code",
    "execution_count": 18,
+   "id": "9cc283f3",
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/html": [
+       "<div>\n",
+       "<style scoped>\n",
+       "    .dataframe tbody tr th:only-of-type {\n",
+       "        vertical-align: middle;\n",
+       "    }\n",
+       "\n",
+       "    .dataframe tbody tr th {\n",
+       "        vertical-align: top;\n",
+       "    }\n",
+       "\n",
+       "    .dataframe thead th {\n",
+       "        text-align: right;\n",
+       "    }\n",
+       "</style>\n",
+       "<table border=\"1\" class=\"dataframe\">\n",
+       "  <thead>\n",
+       "    <tr style=\"text-align: right;\">\n",
+       "      <th></th>\n",
+       "      <th>Year</th>\n",
+       "      <th>Total households</th>\n",
+       "      <th>Population</th>\n",
+       "      <th>Median household income</th>\n",
+       "      <th>Pop. white</th>\n",
+       "      <th>Pop. Black</th>\n",
+       "      <th>Median HH income White Alone Householder</th>\n",
+       "      <th>Median HH income Black or African American Alone Householder</th>\n",
+       "      <th>Location</th>\n",
+       "    </tr>\n",
+       "  </thead>\n",
+       "  <tbody>\n",
+       "    <tr>\n",
+       "      <th>0</th>\n",
+       "      <td>2018</td>\n",
+       "      <td>237204</td>\n",
+       "      <td>602495</td>\n",
+       "      <td>51000</td>\n",
+       "      <td>183276</td>\n",
+       "      <td>371664</td>\n",
+       "      <td>75778</td>\n",
+       "      <td>40770</td>\n",
+       "      <td>Baltimore</td>\n",
+       "    </tr>\n",
+       "  </tbody>\n",
+       "</table>\n",
+       "</div>"
+      ],
+      "text/plain": [
+       "    Year  Total households  Population  Median household income  Pop. white  \\\n",
+       "0   2018            237204      602495                    51000      183276   \n",
+       "\n",
+       "   Pop. Black  Median HH income White Alone Householder  \\\n",
+       "0      371664                                     75778   \n",
+       "\n",
+       "   Median HH income Black or African American Alone Householder   Location  \n",
+       "0                                                         40770  Baltimore  "
+      ]
+     },
+     "execution_count": 18,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "income_2018[[\"Location\", \"Year\"]] = income_2018.Year.str.split(\",\", expand=True)\n",
+    "income_2018"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 20,
    "id": "baa33982",
    "metadata": {},
    "outputs": [],
    "source": [
     "# Export file as a CSV, without the Pandas index, but with the header\n",
-    "#income_2018.to_csv(\"ACS_income_2018.csv\", index = False, header=True)"
+    "income_2018.to_csv(\"balt_income_2018.csv\", index = False, header=True)"
    ]
   },
   {
