--- a/Build_economy2018_MD.ipynb
+++ b/Build_economy2018_MD.ipynb
@@ -748,7 +748,7 @@
    "outputs": [],
    "source": [
     "# Export file as a CSV, without the Pandas index, but with the header\n",
-    "#income_2018.to_csv(\"MD_income_2018.csv\", index = False, header=True)"
+    "income_2018.to_csv(\"MD_income_2018.csv\", index = False, header=True)"
    ]
   },
   {
