--- a/Build_economy2019.ipynb
+++ b/Build_economy2019.ipynb
@@ -691,12 +691,88 @@
   {
    "cell_type": "code",
    "execution_count": 18,
+   "id": "ab67935c",
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/html": [
+       "<div>\n",
+       "<style scoped>\n",
+       "    .dataframe tbody tr th:only-of-type {\n",
+       "        vertical-align: middle;\n",
+       "    }\n",
+       "\n",
+       "    .dataframe tbody tr th {\n",
+       "        vertical-align: top;\n",
+       "    }\n",
+       "\n",
+       "    .dataframe thead th {\n",
+       "        text-align: right;\n",
+       "    }\n",
+       "</style>\n",
+       "<table border=\"1\" class=\"dataframe\">\n",
+       "  <thead>\n",
+       "    <tr style=\"text-align: right;\">\n",
+       "      <th></th>\n",
+       "      <th>Year</th>\n",
+       "      <th>Total households</th>\n",
+       "      <th>Population</th>\n",
+       "      <th>Median household income</th>\n",
+       "      <th>Pop. white</th>\n",
+       "      <th>Pop. Black</th>\n",
+       "      <th>Median HH income White Alone Householder</th>\n",
+       "      <th>Median HH income Black or African American Alone Householder</th>\n",
+       "      <th>Location</th>\n",
+       "    </tr>\n",
+       "  </thead>\n",
+       "  <tbody>\n",
+       "    <tr>\n",
+       "      <th>0</th>\n",
+       "      <td>2019</td>\n",
+       "      <td>242694</td>\n",
+       "      <td>593490</td>\n",
+       "      <td>50177</td>\n",
+       "      <td>179979</td>\n",
+       "      <td>371243</td>\n",
+       "      <td>81116</td>\n",
+       "      <td>39101</td>\n",
+       "      <td>Baltimore</td>\n",
+       "    </tr>\n",
+       "  </tbody>\n",
+       "</table>\n",
+       "</div>"
+      ],
+      "text/plain": [
+       "    Year  Total households  Population  Median household income  Pop. white  \\\n",
+       "0   2019            242694      593490                    50177      179979   \n",
+       "\n",
+       "   Pop. Black  Median HH income White Alone Householder  \\\n",
+       "0      371243                                     81116   \n",
+       "\n",
+       "   Median HH income Black or African American Alone Householder   Location  \n",
+       "0                                                         39101  Baltimore  "
+      ]
+     },
+     "execution_count": 18,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "income_2019[[\"Location\", \"Year\"]] = income_2019.Year.str.split(\",\", expand=True)\n",
+    "income_2019"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 20,
    "id": "baa33982",
    "metadata": {},
    "outputs": [],
    "source": [
     "# Export file as a CSV, without the Pandas index, but with the header\n",
-    "#income_2019.to_csv(\"ACS_income_2019.csv\", index = False, header=True)"
+    "income_2019.to_csv(\"balt_income_2019.csv\", index = False, header=True)"
    ]
   },
   {
